# Recolor

./: .gitignore  CMakeLists.txt  Makefile  TODO.txt  date2_elhdiallo.txt  date2_slascostes.txt  date2_vsamson.txt  date_elhdiallo.txt  date_emolere.txt  date_slascostes.txt  date_vsamson.txt  default_game.rec.txt  game.c  game.h  game_io.c  game_rand.c  main.c  recolor_sdl  recolor_sdl.c  recolor_sdl.h  recolor_solve.c  recolor_solve.h  recolor_text  recolor_text.c  report.xml  solve.c  solve.h  test_game_elhdiallo.c  test_game_emolere.c  test_game_slascostes.c  test_game_vsamson.c
android/: AndroidManifest.xml  README.md
android/jni/: Application.mk
android/jni/src/: Android.mk  CMakeLists.txt  game.c  recolor_sdl.c  recolor_solve.c
cmake/: CMakeLists.txt
report/: 0.html  1.html  2.html  3.html  index.html  stats.html
testemolere/: default_game.sol
